--- a/Diseño Interfaces Web/Evaluable_Interfaz/style.css
+++ b/Diseño Interfaces Web/Evaluable_Interfaz/style.css
@@ -20,11 +20,12 @@
 
  header nav {
 
-   background-color: rgb(152, 160, 116);
+   background-color: rgba(152, 160, 116, 0.712);
    height: 50px;
    display: flex;
    justify-content: center;
    margin-top: 20px;
+   align-items: center;
 
 
  }
@@ -158,14 +159,7 @@
  }
 
 
- .productos-page header nav {
-   background-color: rgb(152, 160, 116);
-   height: 50px;
-   display: flex;
-   justify-content: center;
-   align-items: center;
-   margin-top: 20px;
- }
+
 
  .pago {
   display: flex;
@@ -209,10 +203,10 @@ button {
 
 /* Contenedor principal para el formulario */
 .formulario-container {
-  max-width: 600px;
+  max-width: 500px;
   margin: auto;
   padding: 20px;
-  background-color: #f9f9f9;
+  background-color: rgba(152, 160, 116, 0.452);
   border-radius: 8px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
@@ -232,7 +226,7 @@ button {
 /* Estilo para los inputs y textarea */
 .formulario input,
 .formulario textarea {
-  width: 100%;
+  width: 90%;
   padding: 10px;
   font-size: 1em;
   border: 1px solid #ccc;
@@ -248,9 +242,9 @@ button {
 
 /* Estilo para el botón */
 .formulario button {
-  padding: 10px 20px;
+  padding: 10px 5px;
   font-size: 1em;
-  background-color: #5cb85c;
+  background-color: #053605;
   color: white;
   border: none;
   border-radius: 4px;
@@ -260,5 +254,5 @@ button {
 
 /* Efecto al pasar el mouse sobre el botón */
 .formulario button:hover {
-  background-color: #4cae4c;
+  background-color: #3f2c72;
 }
