--- a/Desarrollo Web en Entorno Cliente/Evaluable_Black_Jack/estilo.css
+++ b/Desarrollo Web en Entorno Cliente/Evaluable_Black_Jack/estilo.css
@@ -35,7 +35,7 @@ body {
 
     /* Fondo semitransparente encima de la imagen */
     background-color: rgba(255, 255, 255, 0.8);
-    /* Blanco con 50% de transparencia */
+    /* Blanco con 80% de transparencia */
     background-blend-mode: overlay;
     /* Mezcla el color con la imagen */
 }
@@ -60,8 +60,11 @@ body {
     margin-top: 10px;
     border: solid rgb(10, 10, 10) 2px;
     display: flex;
-    flex-direction: column; /* Organiza los elementos verticalmente */
-    justify-content: flex-start; /* Asegura que las cartas estén en la parte superior */
+    flex-direction: column;
+    /* Organiza los elementos verticalmente */
+    justify-content: flex-start;
+    /* Asegura que las cartas estén en la parte superior */
+   
 }
 
 .resultados {
@@ -84,9 +87,8 @@ body {
     align-self: flex-start;
     /* Alinea el título al inicio horizontalmente */
     text-align: center;
-    /* Centra el texto del título */
     width: 100%;
-    /* Ocupa el ancho completo del contenedor */
+
 }
 
 .botones {
@@ -94,9 +96,10 @@ body {
     /* Esto empuja los botones hacia abajo */
     display: flex;
     justify-content: center;
-    /* Centra los botones horizontalmente */
-    margin-bottom: 20px; 
+
+    margin-bottom: 20px;
 }
+
 button {
     margin: 10px;
     padding: 10px;
@@ -104,46 +107,89 @@ button {
     border: solid black 2px;
     color: white;
     font-size: 16px;
-    
+
     cursor: pointer;
     border-radius: 5px;
-    margin-bottom: 2px; /* Espacio entre los botones y el borde inferior del contenedor */
+    margin-bottom: 2px;
+    /* Espacio entre los botones y el borde inferior del contenedor */
 }
+
 #cartas img {
-    width: 100px; /* Ajusta el tamaño de las cartas a 100px de ancho */
-    height: auto; /* Mantiene la proporción de la imagen */
-    margin: 1px; /* Espacio entre las cartas */
+    width: 100px;
+    /* Ajusta el tamaño de las cartas a 100px de ancho */
+    height: auto;
+    /* Mantiene la proporción de la imagen */
+    margin: 5px;
+    /* Espacio entre las cartas */
 }
 
-.cartas{
+.cartas {
     width: 90%;
     height: 500px;
-    margin-right: 10px;
+    
     border: solid black 2px;
     display: flex;
+    flex-wrap: wrap;
     justify-content: center;
     align-items: center;
     text-align: center;
     margin-left: 20px;
-    margin-right: 20px;
-    background-color: rgba(22, 92, 28, 0.8); /* Verde más transparente */
+    margin-right: 20px; /* He tenido que vlver a ponerlo ya que entre el
+     contenedor y el otro no me hacia caso paddin es para las cartas en si */ 
+     padding: 10px;  /* Se usa padding dentro d eun contenedor */
+    background-color: rgba(22, 92, 28, 0.8);
+    /* Verde más transparente */
+    box-sizing: border-box;/* Incluye el borde y el relleno en las dimensiones totales */
 }
 
-.jugada{
+.jugada {
     width: 90%;
     height: 500px;
-    margin-right: 10px;
+    
     border: solid black 2px;
     display: flex;
+    flex-wrap: wrap;
     justify-content: center;
     align-items: center;
     text-align: center;
+    padding: 10px;
+
     margin-left: 20px;
-    margin-right: 20px;
-    background-color: rgba(22, 92, 28, 0.8); /* Verde más transparente */
+    margin-right: 20px; 
+    background-color: rgba(22, 92, 28, 0.8);
+    /* Verde más transparente */
+    box-sizing: border-box;
 }
+
 #jugada img {
-    width: 100px; /* Ajusta el tamaño de las cartas a 100px de ancho */
-    height: auto; /* Mantiene la proporción de la imagen */
-    margin: 5px; /* Espacio entre las cartas */
+    width: 100px;
+    /* Ajusta el tamaño de las cartas a 100px de ancho */
+    height: auto;
+    /* Mantiene la proporción de la imagen */
+    margin: 5px;
+    /* Espacio entre las cartas */
+}
+
+.cabecera-resultados{
+
+    border:solid black 2px;
+    text-align: center;
+    background-color: rgba(255, 215, 0, 0.6);
+    background-blend-mode: overlay;
+}
+
+.resultados {
+    font-family: 'Arial', Helvetica, sans-serif;
+    font-size: 24px; /* Aumento del tamaño de la fuente */
+    font-weight: bold; /* Negrita para un aspecto más destacado */
+    letter-spacing: 1px; /* Aumenta el espaciado entre letras */
+    padding: 20px; /* Aumento del padding para un mejor espaciado interno */
+    margin-left: 40px;
+    margin-right: 40px;
+    margin-bottom: 40px;
+    background-color: rgba(109, 189, 236, 0.6);
+    background-blend-mode: overlay;
+    text-align: center; /* Centra el texto */
+    color: #333; /* Color oscuro para mejor contraste */
+    line-height: 1.5; /* Aumenta el interlineado para mejor legibilidad */
 }
