--- a/Diseño Interfaces Web/ActividadUT2/css/estilos.css
+++ b/Diseño Interfaces Web/ActividadUT2/css/estilos.css
@@ -9,11 +9,10 @@ html {
 }
 
 p {
-    margin-top: 0;
-    
-   
+    margin-top: 5px;
     margin-right: 3px;
     margin-left: 3px;
+    padding-bottom: 5px;
     font-family: Arial, Helvetica, sans-serif;
 }
 
@@ -68,6 +67,8 @@ h2 {
     margin-left: 20px;
     margin-right: 20px;
     
+    
+
 }
 
 
@@ -76,9 +77,8 @@ h3 {
     font-family: Arial, Helvetica, sans-serif;
     background-color: rgb(38, 135, 173);
     border-radius: 5px 5px 0px 0px;
+    margin-bottom: 0;
 }
-
-
 
 
 /* 
