--- a/Diseño Interfaces Web/ActividadUT3/css/estilos.css
+++ b/Diseño Interfaces Web/ActividadUT3/css/estilos.css
@@ -1,35 +1,43 @@
-header {
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
     font-family: "Lobster", sans-serif;
     color: rgb(119, 119, 119);
+    font-size: 22px;
+  }
+  body {
+    
+    line-height: 1.4; /* Espaciado adecuado */
+  }
+header {
+    
     text-align: center;
 }
 
 h2 {
-    font-family: "Lobster", sans-serif;
-    color: rgb(119, 119, 119);
+   
     text-align: center;
 }
 
 p {
-    font-family: "Lobster", sans-serif;
-    color: rgb(119, 119, 119);
+ 
     text-align: center;
 }
-
 nav {
-    font-family: "Lobster", sans-serif;
-    color: rgb(119, 119, 119);
-    display: flex;
+        display: flex;
     flex-direction: column;
     gap: 20px;
     margin-top: 20px;
     margin-left: 20px;
 }
-
 .content_wrapper {
     border-top: solid grey 1px;
     display: flex;
     gap: 20px;
+    width: 97%; 
+    margin: 0 auto; 
+       
 }
 
 main {
@@ -40,9 +48,18 @@ main {
     border-radius: 20px;
     align-items: center;
     padding: 20px;
-    gap: 20px;
+    gap: 30px;
     margin-top: 20px;
+    width: 100%;
+    height: 40vh;
+   
+} 
+
+.texto-foto1{
+
+    font-size: 24px;
 }
+
 
 .foto1 {
     width: 70%;
@@ -66,6 +83,9 @@ main {
     padding: 20px;
     gap: 20px;
     margin-top: 20px;
+    height: 40vh;
+    
+    
 }
 
 .articles {
@@ -73,7 +93,9 @@ main {
     padding: 20px;
     text-align: center;
     gap: 20px;
-    border-bottom: solid grey 1px;
+   
+    height: 40vh;
+    margin-left: 120px;
 }
 
 article {
@@ -83,6 +105,9 @@ article {
     border: solid grey 1px;
     border-radius: 20px;
     padding: 20px;
+    gap: 20px;
+    
+    
 }
 
 .foto3 {
@@ -108,10 +133,12 @@ footer {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    font-family: "Lobster", sans-serif;
-    color: rgb(119, 119, 119);
+    border-top: solid grey 1px;
+    width: 97%; /* Limita el ancho del footer al 80% */
+    margin: 0 auto; /* Centra el footer horizontalmente */
+    
 }
 
 footer img {
-    width: 20%;
+    width: 12%;
 }
