--- a/Desarrollo Web en Entorno Cliente/Bases_Notion_Tema4/Ejercicio5_Red_Social_X/Utils/css/styles.css
+++ b/Desarrollo Web en Entorno Cliente/Bases_Notion_Tema4/Ejercicio5_Red_Social_X/Utils/css/styles.css
@@ -30,3 +30,16 @@ padding: 5%;
     border: solid black 2px;
     padding: 10%;
 }
+
+
+body{
+
+    background-color: rgba(0, 0, 0, 0.863) !important;
+}
+
+#negro{
+
+    background-color: white;
+    padding: 5%;
+    border-radius: 5px;
+}
