--- a/Desarrollo Web en Entorno Cliente/Bases_Notion_Tema4/Ejercicio8_Asincronia/Utils/css/style.css
+++ b/Desarrollo Web en Entorno Cliente/Bases_Notion_Tema4/Ejercicio8_Asincronia/Utils/css/style.css
@@ -1,15 +1,35 @@
 #productos .col-4 {
-    margin-bottom: 20px; 
-    padding-left: 15px;  
-    padding-right: 15px;
-    
-   
-    
-  }
+  margin-bottom: 20px;
+  padding-left: 15px;
+  padding-right: 15px;
 
-  #carrito{
 
-    border: solid black 2px;
-    border-radius: 5px;
-    background-color: blanchedalmond;
-  }
+
+}
+
+#carrito {
+
+  border: solid black 2px;
+  border-radius: 5px;
+  background-color: blanchedalmond;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  max-height: 80vh;
+  overflow-y: auto; /* esto activas la barra para ir moviendose
+   hacia abajo en vertical y ver todos lso productos dle carrito */
+  padding: 10px;
+}
+
+#listaCarrito .list-group-item {
+  margin-bottom: 10px;
+   flex-grow: 1;
+}
+
+#filtrar {
+  width: 30%; 
+}
+#filtrarCategoria{
+
+  width: 30%;
+}
