--- a/Desarrollo Web en Entorno Servidor/U4T_Actividad1/Utils/css/style.css
+++ b/Desarrollo Web en Entorno Servidor/U4T_Actividad1/Utils/css/style.css
@@ -25,3 +25,16 @@ body{
     
 }
 
+#agendah3{
+
+margin-bottom: 100px !important;
+color: brown;
+font-size: 34px;
+
+}
+
+#abuscar{
+text-align: center;
+align-items: center;
+
+}
