--- a/Desarrollo Web en Entorno Servidor/Inmobiliaria/Utils/css/style.css
+++ b/Desarrollo Web en Entorno Servidor/Inmobiliaria/Utils/css/style.css
@@ -1,13 +1,15 @@
 /* Estilo del header */
 .titulo {
-    margin-bottom: 0; /* Elimina espacio entre el h1 y la nav */
+    margin-bottom: 0;
+    /* Elimina espacio entre el h1 y la nav */
 }
 
 .tituloh1 {
     font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
     font-size: 40px;
-    font-style: italic; /* Letra en cursiva */
-     background-color: rgb(139, 132, 27); 
+    font-style: italic;
+    /* Letra en cursiva */
+    background-color: rgb(139, 132, 27);
     margin: 0;
     padding: 10px 0;
     border-radius: 5px;
@@ -17,70 +19,169 @@
 
 /* Estilo del footer */
 .footer {
+
     
+
     text-align: center;
 }
 
-img{
+img {
 
-border-radius: 10px;
+    border-radius: 10px;
 
 
 
 }
 
 .tooltip-text {
-    background-color: rgb(255, 254, 254); /* Gris semi-transparente */
+    background-color: rgb(255, 254, 254);
+    /* Gris semi-transparente */
     color: white;
     font-size: 16px;
     max-width: 200px;
     text-align: center;
     border-radius: 25px;
     box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.3);
-  }
-
-  .bg-black-custom {
-    background: linear-gradient(to bottom, #1f0b38, #000000) !important; /* Rojo a negro */
 }
+
+.bg-black-custom {
+    background: linear-gradient(to bottom, #2eb8c7, #000000) !important;
+    /* Rojo a negro */
+}
+
 .bg-black-custom2 {
-    background: radial-gradient(circle, #64630b, #c5b80400) !important;
+    background: radial-gradient(circle, #a09e21, #c5b80400) !important;
 }
 
-.formulario{
+.formulario {
 
-border: solid rgb(255, 255, 255) 3px;
+    border: solid rgb(255, 255, 255) 3px;
 
-background-color: rgb(248, 250, 250);
-padding: 10px;
-border-radius: 10px;
-width: 35%;
-display: flex;
-flex-direction: column;
-align-items: center;
-position: absolute; /* Usamos absolute para posicionarlo */
-top: 50%; /* Posiciona el formulario en el centro vertical */
-left: 50%; /* Posiciona el formulario en el centro horizontal */
-transform: translate(-50%, -50%); /* Ajusta el formulario para que esté exactamente en el centro */
-transition: transform 0.3s ease;
-/* normlamente pondria flex enel body pero com quiero usar
+    background-color: rgb(248, 250, 250);
+    padding: 10px;
+    border-radius: 10px;
+    width: 35%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    position: absolute;
+    /* Usamos absolute para posicionarlo */
+    top: 50%;
+    /* Posiciona el formulario en el centro vertical */
+    left: 50%;
+    /* Posiciona el formulario en el centro horizontal */
+    transform: translate(-50%, -50%);
+    /* Ajusta el formulario para que esté exactamente en el centro */
+    transition: transform 0.3s ease;
+    /* normlamente pondria flex enel body pero com quiero usar
  el mismo style he tendido que poner position etc */
 
-  
-}
-.formulario:hover {
-    transform: translate(-50%, -50%) scale(1.05); /* Se mueve un poco hacia arriba y agranda ligeramente */
-    box-shadow: 0 10px 20px rgba(248, 247, 247, 0.2); /* Agrega un efecto de sombra para resaltar el movimiento */
+
 }
 
-.form{
-    font-weight: bold;
-padding: 10px;
-    width: 100%;
+.formulario:hover {
+    transform: translate(-50%, -50%) scale(1.05);
+    /* Se mueve un poco hacia arriba y agranda ligeramente */
+    box-shadow: 0 10px 20px rgba(248, 247, 247, 0.2);
+    /* Agrega un efecto de sombra para resaltar el movimiento */
 }
+
+.form {
+    font-weight: bold;
+    padding: 10px;
+    width: 100%;
+    border-radius: 10px;
+}
+
 label {
-    margin-bottom: 8px; /* Espacio de 8px debajo de la etiqueta */
+    margin-bottom: 8px;
+    /* Espacio de 8px debajo de la etiqueta */
 }
 
 input {
-    margin-bottom: 15px; /* Espacio de 15px debajo del input */
+    margin-bottom: 15px;
+    /* Espacio de 15px debajo del input */
 }
+
+.boton {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    
+    
+}
+
+.btn{
+
+    width: 80%;
+}
+.col{
+    text-align: center;
+    border: solid black 5px ;
+    background-color: white;
+    border-radius: 10px;
+    padding: 50px;
+    width: 80% ;
+    min-height: 100px;
+    box-shadow: 0 2px 5px rgba(0,0,0,0.3);
+    transition: transform 0.3s, 
+    box-shadow 0.3s;
+    
+}
+.row1 {
+    display: flex;
+    gap: 20px; /* Separa las columnas (las cards) dentro de la misma fila */
+  }
+
+.col:hover {
+    transform: translateY(-5px);
+    box-shadow: 0 8px 15px rgba(0,0,0,0.3);
+}
+.usuariosContainer{
+
+display: flex;
+flex-direction: column;
+
+
+
+}
+.formulario1 {
+    border: solid rgb(255, 255, 255) 3px;
+    background-color: rgb(248, 250, 250);
+    
+    border-radius: 10px;
+    width: 60%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    transition: transform 0.3s ease, box-shadow 0.3s ease;
+}
+
+/* Efecto al pasar el mouse */
+.formulario1:hover {
+    transform: translate(-50%, -50%) scale(1.05); 
+    box-shadow: 0 10px 20px rgba(0, 0, 0, 0.3); 
+}
+
+
+.formulario1 input {
+    width: 260px;  /* Ajusta el ancho */
+    height: 30px; /* Ajusta la altura */
+    font-size: 12px; /* Tamaño del texto dentro del input */
+     /* Reduce el espacio interno */
+}
+
+.table{
+
+border-radius: 10px;
+
+
+}
+
+
+
+
