--- a/Diseño Interfaces Web/Ejercicio_Presencial_London/css/style.css
+++ b/Diseño Interfaces Web/Ejercicio_Presencial_London/css/style.css
@@ -36,51 +36,84 @@ body {
     align-items: center; */
 }
 
-img {
-    width: 100%;
-    height: auto;
-    border: solid orange 8px;
+
+img{
+
+width: 100%;
+height: 100%;
+ display: block; 
+    border: solid orange 10px;
     box-sizing: border-box;
-    display: block;
-
 }
 
-.imagen {
+.imagen1{
 
-    border: solid orangered 8px;
+width: 25%;
+border: solid rgb(245, 102, 49) 8px;
+       
 
-    width: 60%;
-
-    /* padding: 0; */
-
-    vertical-align: top;
-    margin: 0px;
-    /* position: relative; */
-
-
+   
 }
 
-.container {
-    width: 80%;
-    height: auto;
-    border: solid orangered 8px;
-    background-color: white;
-    display: flex;
-    padding: 20px;
-    flex-direction: row;
-    margin: 0 auto;
 
-}
 .contenido{
 
+   margin-left: 10px;
 
-/* display: flex;
 
+  margin-top: -15px;
+
+
+}
+
+
+.container{
+
+    padding: 12px;
+
+    display:flex;
+
+background-color: white;
+    border: solid red 8px;
+
+    margin-left: 5%;
+    margin-right: 5%;
+}
+.british{
+
+margin-top: -10px;
+    font-size: 14px;
+}
+
+.containerTotal{
+
+display: flex;
 flex-direction: column;
-justify-content: flex-start;
-align-items: flex-start; */
-margin-left: 10px;
- margin-top: -20px; 
+gap: 15px;
+
+}
+
+.imagen2{
 
 
+    border: solid rgb(248, 244, 1) 8px;
+width: 45%;
+}
+
+.container2{
+
+display: flex;
+flex-direction: row-reverse;
+    background-color: white;
+    border: solid rgb(238, 138, 56) 8px;
+    padding: 12px;
+    margin-left: 5%;
+    margin-right: 5%;
+
+}
+
+.imagen3{
+
+    width: 45%;
+    border: solid rgb(245, 102, 49) 8px;
 }
