--- a/Desarrollo Web en Entorno Servidor/Inmobiliaria/Utils/css/style.css
+++ b/Desarrollo Web en Entorno Servidor/Inmobiliaria/Utils/css/style.css
@@ -57,14 +57,10 @@ img {
     flex-direction: column;
     align-items: center;
     position: absolute;
-    /* Usamos absolute para posicionarlo */
-    top: 50%;
-    /* Posiciona el formulario en el centro vertical */
+       top: 50%;
     left: 50%;
-    /* Posiciona el formulario en el centro horizontal */
-    transform: translate(-50%, -50%);
-    /* Ajusta el formulario para que esté exactamente en el centro */
-    transition: transform 0.3s ease;
+     transform: translate(-50%, -50%);
+       transition: transform 0.3s ease;
     /* normlamente pondria flex enel body pero com quiero usar
  el mismo style he tendido que poner position etc */
 }
@@ -222,30 +218,7 @@ input {
     /* Ajusta el margen superior e inferior de los párrafos */
 }
 
-bodybody {
-    display: flex;
-    flex-direction: column;
-    min-height: 100vh;
-    margin: 0;
-}
 
-buscarPisoDiv {
-    flex-grow: 1;
-    padding: 20px;
-    /* Ajusta el padding según sea necesario */
-}
-
-footerBuscar {
-    text-align: center;
-    margin-top: auto;
-    /* Empuja el footer hacia abajo */
-    background-color: #000;
-    /* Ajusta el color de fondo según sea necesario */
-    color: #fff;
-    /* Ajusta el color del texto según sea necesario */
-    padding: 10px 0;
-    /* Ajusta el padding según sea necesario */
-}
 
 
 .sesion{
@@ -275,4 +248,74 @@ background-color: aliceblue;
 width: 70%;
 
 
+}
+
+.footerAll{
+
+display:flex ;
+
+flex-direction: column;
+align-items: end;
+
+
+}
+
+.bodyAll {
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
+    margin: 0;
+}
+
+.mainContent {
+    flex-grow: 1;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.formularioR {
+    border: solid rgb(255, 255, 255) 3px;
+    background-color: rgb(248, 250, 250);
+    padding: 10px;
+    border-radius: 10px;
+    width: 35%;
+    transition: transform 0.3s ease;
+}
+
+.formularioR:hover {
+    transform: scale(1.05); /* Ya no necesitas translate */
+    box-shadow: 0 10px 20px rgba(248, 247, 247, 0.2);
+}
+
+.formularioB {
+    border: solid rgb(255, 255, 255) 3px;
+    background-color: rgb(248, 250, 250);
+    padding: 10px;
+    border-radius: 10px;
+    width: 65%;
+    transition: transform 0.3s ease;
+    margin-top: 10%;
+    text-align: center;
+}
+
+.formularioRB:hover {
+    transform: scale(1.05); /* Ya no necesitas translate */
+    box-shadow: 0 10px 20px rgba(248, 247, 247, 0.2);
+}
+
+.formularioM {
+    border: solid rgb(255, 255, 255) 3px;
+    background-color: rgb(248, 250, 250);
+    padding: 10px;
+    border-radius: 10px;
+    width: 65%;
+    transition: transform 0.3s ease;
+    margin-top: 2%;
+    text-align: center;
+}
+
+.formularioM:hover {
+    transform: scale(1.05); /* Ya no necesitas translate */
+    box-shadow: 0 10px 20px rgba(248, 247, 247, 0.2);
 }
