--- a/Desarrollo Web en Entorno Cliente/Ejercicios_repaso/Tienda2/Utils/css/style.css
+++ b/Desarrollo Web en Entorno Cliente/Ejercicios_repaso/Tienda2/Utils/css/style.css
@@ -1,10 +1,29 @@
+.boton {
 
+    display: flex;
 
-.boton{
+    justify-content: center;
 
-display: flex;
+}
 
-justify-content: center;
+.carrito {
 
+    border: solid white 3px;
+    min-height: 200vh;
+}
 
+.producto-carrito {
+
+    padding: 3px;
+
+}
+
+.producto-carrito img {
+
+    max-height: 70px;
+}
+
+.producto-carrito .precio {
+    color: red;
+    font-weight: bold;
 }
